--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,12 +17,13 @@
 
 bin_PROGRAMS=lpacked 
 pkglib_LTLIBRARIES=liblpacked.la 
-noinst_HEADERS=compat.h descriptor.h 
+noinst_DATA=gvdb/gvdb.doap 
+noinst_HEADERS=builder.h descriptor.h gvdb/gvdb-builder.h gvdb/gvdb-format.h gvdb/gvdb-reader.h 
 
 liblpacked_la_CFLAGS=$(GIO_CFLAGS) $(LUA_CFLAGS) -flto 
 liblpacked_la_LDFLAGS=-flto 
 liblpacked_la_LIBADD=$(GIO_LIBS) $(LUA_LIBS) 
-liblpacked_la_SOURCES=compat.c descriptor.c 
+liblpacked_la_SOURCES=builder.c descriptor.c gvdb/gvdb-builder.c gvdb/gvdb-reader.c 
 
 lpacked_CFLAGS=$(GIO_CFLAGS) $(LUA_CFLAGS) -flto 
 lpacked_LDADD=$(GIO_LIBS) $(LUA_LIBS)  liblpacked.la 
