--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -20,13 +20,13 @@ resources_FILES=$(shell $(GLIB_COMPILE_RESOURCES) --generate-dependencies resour
 bin_PROGRAMS=lpacked
 pkglib_LTLIBRARIES=liblpacked.la
 noinst_DATA=$(resources_FILES) 
-noinst_HEADERS=application.h compat.h package.h 
+noinst_HEADERS=application.h builder.h compat.h package.h 
 SUFFIXES=.gir .typelib 
 
 liblpacked_la_CFLAGS=$(GIO_CFLAGS) $(LGI_CFLAGS) $(LUA_CFLAGS) -flto 
 liblpacked_la_LDFLAGS=-flto 
 liblpacked_la_LIBADD=$(GIO_LIBS) $(LGI_LIBS) $(LUA_LIBS) 
-liblpacked_la_SOURCES=application.c compat.c package.c 
+liblpacked_la_SOURCES=application.c builder.c compat.c package.c 
 
 lpacked_CFLAGS=$(GIO_CFLAGS) $(LGI_CFLAGS) $(LUA_CFLAGS) -flto 
 lpacked_LDADD=$(GIO_LIBS) $(LGI_LIBS) $(LUA_LIBS) liblpacked.la 
@@ -52,7 +52,7 @@ INTROSPECTION_COMPILER_ARGS=--includedir=$(srcdir)
 
 LPacked.gir: liblpacked.la
 LPacked_gir_CFLAGS=$(GIO_CFLAGS) $(LGI_CFLAGS) $(LUA_CFLAGS) 
-LPacked_gir_FILES=application.c application.h package.c package.h 
+LPacked_gir_FILES=application.c application.h builder.c builder.h package.c package.h 
 LPacked_gir_INCLUDES=Gio-2.0 
 LPacked_gir_LIBS=liblpacked.la  
 LPacked_gir_NAMESPACE=LPacked
