LpPackBuilder object (write part)

--- a/configure.ac
+++ b/configure.ac
@@ -155,6 +155,7 @@ GOBJECT_INTROSPECTION_REQUIRE([1.0])
 AC_SUBST([GIR_CFLAGS], [$INTROSPECTION_CFLAGS])
 AC_SUBST([GIR_LIBS], [$INTROSPECTION_LIBS])
 
+PKG_CHECK_MODULES([ARCHIVE], [libarchive])
 PKG_CHECK_MODULES([GIO], [gio-2.0])
 
 #
